# cavestory-pause-mod

./: .gitignore  CMakeLists.txt  README.md  mod.vcxproj  mod.vcxproj.filters
CaveStory/data/Lang/: English.txt
CaveStory/mods/: mods.txt
CaveStory/mods/lang/: settings.ini
CaveStory/mods/pause/: pause.ilk
CaveStory/savedata/: window.rect
import/: API_Pause.cpp  API_Pause.h
src/: API_Lang.cpp  API_Lang.h  AutPI.cpp  AutPI.h  Config.cpp  Config.h  Main.cpp  PauseScreen.cpp  PauseScreen.h
src/lua/: Lua.cpp  Lua.h
